# multihook

./: .gitignore  Anchor.toml  CLAUDE.md  LICENSE  POLICY_AUTHORITY.md  POLICY_INTERFACE.md  README.md  package.json
.ralph/: @fix_plan.md
ai/: design-progress.md  design-research.md  design-research.v1.md  memory.md  sponsor-integration.md
app/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/demo/: index.html
app/sponsors/: index.html
app/src/: analytics-birdeye.ts  analytics-dune.ts  analytics-goldrush.ts  audit-feed.ts  (+18 more)
docs/: index.html
dune/: audit_events.sql
programs/metahook/: Cargo.toml
programs/metahook/src/: lib.rs
programs/policy-sns-allowlist/: Cargo.toml
programs/policy-sns-allowlist/src/: lib.rs
proposals/: proposal-1.html  proposal-2.html  proposal-3.html
scripts/: diagnose-provision-live.mjs  diagnose-provision.mjs  diagnose-transfer-flow.mjs  package-lock.json  package.json  phantom-e2e.mjs  phantom-record.mjs  record-live-demo.sh  record-path-a.sh  site-record-v3.mjs  site-record.mjs
submissions/: COLOSSEUM_FORM_ANSWERS.md  SHIP_IT.md  VIDEO_DELIVERY.md  adevar-labs.md  dune-analytics-DROPPED.md  dune-analytics.md  eitherway-birdeye-DROPPED.md  eitherway-birdeye.md  eitherway-quicknode.md  goldrush-covalent-DROPPED.md  goldrush-covalent.md  main-frontier.md  phantom.md  rpcfast.md  sns-identity.md  umbra-privacy.md
tests/: transfer-hook.ts
video/: VOICEOVER_CLIPS.md  assemble.sh  capture-frames.js  composite-v3.sh  composite.sh  generate-ass.py  generate-audio.sh  generate-captions.py  generate-srt.py  generate-thumbnail.py  render-subs-png.py  subs.ass  subs.srt
(+76 files in other folders)
