[package]
name = "metahook"
version = "0.1.0"
description = "Meta transfer-hook for Token-2022: composes multiple child policy programs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "metahook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022_extensions"] }
spl-transfer-hook-interface = "0.10"
spl-tlv-account-resolution = "0.10"
spl-pod = "0.6"
policy-allowlist = { path = "../policy-allowlist", features = ["cpi"] }
policy-sanctions-ofac = { path = "../policy-sanctions-ofac", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
