[package]
name = "policy-sns-allowlist"
version = "0.1.0"
description = "Third reference policy for MetaHook — gates transfers on whether the recipient owns an authorised .sol domain (Solana Name Service / Bonfida)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "policy_sns_allowlist"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
